--- a/src/main/resources/templates/book-list.html
+++ b/src/main/resources/templates/book-list.html
@@ -6,9 +6,12 @@
     <title>Book List Page</title>
 
     <!-- Bootstrap and FontAwesome -->
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/7ee7b60095.js" crossorigin="anonymous"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" th:href="@{/css/styles.css}" />
+
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" th:href="@{/images/favicon/apple-touch-icon.png}" />
@@ -22,52 +25,54 @@
     <meta name="theme-color" content="#ffffff" />
 </head>
 <body>
-<section th:replace="fragments/navbar :: navbar"></section>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <section>
     <div class="book_list container">
         <div th:if="${addBookSuccess}" class="mt-2 text-center text-success" th:text="${addBookSuccess}"></div>
 
-        <h1 class="text-center">Book List</h1>
+        <h1 class="text-center">All Books</h1>
 
         <form class="d-flex mb-4 justify-content-center align-items-center">
             <i class="mx-2 fas fa-search"></i>
             <input class="form-control w-50" type="text" id="search_book" placeholder="Search books" onkeyup="searchBook()">
         </form>
 
-        <div class="book_list_box d-flex flex-wrap justify-content-center">
-            <div th:each="book : ${books}" class="book_card d-flex flex-column justify-content-between m-3 p-3 border rounded shadow">
-                <div class="book_image text-center">
-                    <img th:src="@{/images/books/{img}(img=${book.image})}" class="img-fluid" alt="Book cover"/>
-                </div>
-                <div class="book_tag mt-2">
-                    <h4 th:text="${book.name}">Book Name</h4>
-                    <p class="writer" th:text="${book.author.name}">Author</p>
-                    <div class="categories" th:text="${book.category.name}">Category</div>
-                    <p class="book_price">
-                        <span th:text="'$', ${book.salePrice}"></span>
-                        <sub><del th:text="'$', ${book.rrp}"></del></sub>
-                    </p>
-                </div>
-                <div id="purchase" class="d-flex flex-column justify-content-between">
-                    <a th:href="@{/book(id=${book.id})}" class="book_btn mb-2 btn btn-primary">Details</a>
+        <div class="row justify-content-center ">
+            <div th:each="book : ${books}" class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
+                <div class="book_card d-flex flex-column justify-content-between p-3 border rounded shadow w-100 h-100">
+                    <div class="book_image text-center mb-2">
+                        <img th:src="@{/images/books/{img}(img=${book.image})}" class="img-fluid book-img" alt="Book cover" />
+                    </div>
+                    <div class="book_tag text-center flex-grow-1 d-flex flex-column justify-content-start mt-2">
+                        <h4 class="mb-1" th:text="${book.name}">Book Name</h4>
+                        <p class="writer mb-1" th:text="${book.author.name}">Author</p>
+                        <div class="categories mb-1" th:text="${book.category.name}">Category</div>
+                        <p class="book_price mb-3">
+                            <span th:text="'$' + ${book.salePrice}"></span>
+                            <sub><del th:text="'$' + ${book.rrp}"></del></sub>
+                        </p>
+                    </div>
+                    <div id="purchase" class="d-flex flex-column justify-content-between">
+                        <a th:href="@{/book(id=${book.id})}" class="book_btn mb-2 btn btn-primary">Details</a>
 
-                    <div class="d-flex justify-content-center">
-                        <form class="mx-1" th:action="@{/add-to-cart}" method="get">
-                            <input type="hidden" name="bookId" th:value="${book.id}" />
-                            <input type="hidden" name="bookImage" th:value="${book.image}" />
-                            <input type="hidden" name="bookName" th:value="${book.name}" />
-                            <input type="hidden" name="bookType" th:value="${book.type}" />
-                            <input type="hidden" name="bookDescription" th:value="${book.description}" />
-                            <input type="hidden" name="bookPrice" th:value="${book.salePrice}" />
-                            <button type="submit" class="btn btn-success">Add To Cart</button>
-                        </form>
+                        <div class="d-flex justify-content-center">
+                            <form class="mx-1" th:action="@{/add-to-cart}" method="get">
+                                <input type="hidden" name="bookId" th:value="${book.id}" />
+                                <input type="hidden" name="bookImage" th:value="${book.image}" />
+                                <input type="hidden" name="bookName" th:value="${book.name}" />
+                                <input type="hidden" name="bookType" th:value="${book.type}" />
+                                <input type="hidden" name="bookDescription" th:value="${book.description}" />
+                                <input type="hidden" name="bookPrice" th:value="${book.salePrice}" />
+                                <button type="submit" class="btn btn-success">Add To Cart</button>
+                            </form>
 
-                        <form class="mx-1" th:action="@{/order-now}" method="post">
-                            <input type="hidden" name="bookId" th:value="${book.id}" />
-                            <input type="hidden" name="bookPrice" th:value="${book.salePrice}" />
-                            <button class="btn btn-success">Buy Now</button>
-                        </form>
+                            <form class="mx-1" th:action="@{/order-now}" method="post">
+                                <input type="hidden" name="bookId" th:value="${book.id}" />
+                                <input type="hidden" name="bookPrice" th:value="${book.salePrice}" />
+                                <button class="btn btn-success">Buy Now</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -75,7 +80,7 @@
     </div>
 </section>
 
-<section th:replace="fragments/footer :: footer"></section>
+<div th:replace="fragments/footer :: footer"></div>
 
 <script type="text/javascript" th:src="@{/js/searchBook.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
