--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,7 +1,7 @@
 <nav th:fragment="navbar" class="navbar navbar-expand-lg bg-light">
 
 <div class="container-fluid">
-        <a class="navbar-brand logo" th:href="@{/home}">
+        <a class="navbar-brand logo" th:href="@{/}">
             <img th:src="@{/images/navbar/WiseOwlBookstoreCopy.png}" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -13,7 +13,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" th:href="@{/home}">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/books}">All Books</a></li>
 
                 <!-- Show only if admin == 1 -->
