--- a/src/main/resources/templates/book-list.html
+++ b/src/main/resources/templates/book-list.html
@@ -24,6 +24,7 @@
     <meta name="msapplication-config" th:content="@{/images/favicon/browserconfig.xml}" />
     <meta name="theme-color" content="#ffffff" />
 </head>
+
 <body>
 <div th:replace="fragments/navbar :: navbar"></div>
 
@@ -39,7 +40,7 @@
         </form>
 
         <div class="row justify-content-center ">
-            <div th:each="book : ${books}" class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
+            <div th:each="book : ${books}" class="col-12 col-sm-6 col-md-4 col-lg-3 1mb-4 d-flex">
                 <div class="book_card d-flex flex-column justify-content-between p-3 border rounded shadow w-100 h-100">
                     <div class="book_image text-center mb-2">
                         <a th:href="@{/book/{id}(id=${book.id})}"><img th:src="@{/images/books/{img}(img=${book.image})}" class="img-fluid book-img" alt="Book cover" /></a>
