--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -40,7 +40,7 @@
                         <i class="fa-solid fa-money-check-dollar"></i>
                     </a>
                     <a class="mx-1" th:href="@{/cart}">
-                        <i class="fas fa-shopping-cart mx-2"></i>
+                        <i class="fas fa-shopping-cartItem mx-2"></i>
                     </a>
                     <div class="nav-item dropdown mx-1">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
