successfully implement checkout page

--- a/src/main/resources/templates/book-list.html
+++ b/src/main/resources/templates/book-list.html
@@ -65,7 +65,7 @@
                                 <button type="submit" class="btn btn-success">Add To Cart</button>
                             </form>
 
-                            <form class="mx-1" th:action="@{/order-now}" method="post">
+                            <form class="mx-1" th:action="@{/orders-now}" method="post">
                                 <input type="hidden" name="bookId" th:value="${book.id}" />
                                 <button type="submit" class="btn btn-success">Buy Now</button>
                             </form>
