--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -90,7 +90,7 @@
 </section>
 
 
-<section th:replace="~{fragments/footer :: footer}"></section>
+<div th:replace="~{fragments/footer :: footer}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
