--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,7 +57,7 @@
                 <div class="services_card p-3 shadow rounded">
                     <i class="fa-solid fa-truck-fast fa-2x mb-2"></i>
                     <h3 class="h5">Fast Delivery</h3>
-                    <p>Free for order over $50!</p>
+                    <p>Free for orders over $50!</p>
                 </div>
             </div>
             <div class="col-md-3 mb-4">
